change divider text style on mobile devices to avoid horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@
     width: 100%;
 }
 
+@media only screen and (max-width: 414px) {
+    .ui.horizontal.divider {
+        white-space: normal;
+    }
+}
+
 @media only screen and (min-width: 992px) {
     .static-video {
         bottom: 10px;
